@@ -9,6 +9,8 @@ Bugfixes:
  - GBA Memory: Ensure changing the timing of a DMA reschedules it
  - Qt: Fix window not regaining focus after exiting savestate window
  - Qt: Fix regression where video would not record if the game had already started
+Misc:
+ - Qt: Show multiplayer numbers in window title
 
 0.2.0: (2015-04-03)
 Features:
